swagger for AlbumsController
